tests/samples/negative/modules/unknown_import_alias.ax
module unknown_import_alias;

fn main() -> i32 {
    return missing::value();
}
